Upgrade dependencies, make java 17+ compatible