@@ -8,16 +8,16 @@ repositories {
 }
 
 group = 'com.github.jbytecode'
-version = '4.0.3-SNAPSHOT'
+version = '4.0.3'
 description = 'RCaller is a software library which simplifies performing data analysis and statistical calculations in Java using R. The details are hidden from users including transferring data between platforms, function calls, and retrieving results.'
 
 dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    compileOnly 'org.apache.arrow:arrow-vector:[8.0.0,)'
+    implementation 'org.apache.commons:commons-lang3:3.14.0'
+    compileOnly 'org.apache.arrow:arrow-vector:[15.0.2,)'
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.apache.arrow:arrow-vector:[8.0.0,)'
-    testImplementation 'org.apache.arrow:arrow-memory-netty:[8.0.0,)'
+    testImplementation 'org.apache.arrow:arrow-vector:[15.0.2,)'
+    testImplementation 'org.apache.arrow:arrow-memory-netty:[15.0.2,)'
 }
 
 java.sourceCompatibility = JavaVersion.VERSION_11
@@ -42,4 +42,8 @@ publishing {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+tasks.test {
+    jvmArgs = ["--add-opens", "java.base/java.nio=ALL-UNNAMED"]
 }
